test/regress/core/select.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\02\7f\7f\03\82\80\80\80\00\01\00\0a\96\80\80"
    "\80\00\01\90\80\80\80\00\00\41\00\41\00\41\00\41"
    "\00\41\01\1c\02\7f\7f\0b"
  )
  "invalid result arity"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\01\6f\00\03\82\80\80\80\00\01\00\0a\90\80\80\80"
    "\00\01\8a\80\80\80\00\00\20\00\20\00\41\01\1b\1a"
    "\0b"
  )
  "type mismatch"
)
